# gngsn-llm-lab

./: .gitignore  pyproject.toml
log/: Error.md
pynb/: chatbot_tutorial.ipynb  rag_tutorial.ipynb
src/gngsn_llm_lab/: Chatbot.py
src/gngsn_llm_lab/domain/: agent.py  graph.py  llm.py  state.py
src/gngsn_llm_lab/entity/: toolkit.py
src/gngsn_llm_lab/lang_chain/: simple_app.py
