[project]
name = "gngsn-llm-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "gngsn",email = "enfj.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "gngsn_llm_lab", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
