[project]
name = "gngsn-llm-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "gngsn",email = "enfj.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-google-genai (>=2.0.11,<3.0.0)",
    "pypdf (>=5.3.1,<6.0.0)",
    "langchain[google-vertexai] (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)"
]

[tool.poetry]
packages = [{include = "gngsn_llm_lab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
